[tool.poetry]
name = "log-analyzer"
version = "0.1.0"
description = ""
authors = ["Erling Møller <em@intempus.dk>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.1"
pycairo = "^1.25.1"
PyGObject = "^3.46.0"
dpkt = "^1.9.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
